--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -4,8 +4,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  mac-aarch:
     runs-on: macos-14
+    steps:
+    - uses: actions/checkout@v4
+    - name: DoSomething
+      run: |
+        uname -a
+        arch
+
+  mac-intel:
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
     - name: DoSomething
